appointmentscheduler/force-app/main/default/objects/Physician__c/Physician__c.object-meta.xml
<CustomObject>
    <label>Physician</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Physicians</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>