appointmentscheduler/force-app/main/default/objects/Physician__c/fields/Request_Authorization__c.field-meta.xml
<CustomField>
    <fullName>Request_Authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Request Authorization</label>
    <type>Checkbox</type>
</CustomField>