appointmentscheduler/force-app/main/default/objects/Physician__c/fields/Specialization__c.field-meta.xml
<CustomField>
    <fullName>Specialization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Specialization</label>
    <referenceTo>Specialization__c</referenceTo>
    <relationshipLabel>Physicians</relationshipLabel>
    <relationshipName>Physicians</relationshipName>
    <type>Lookup</type>
</CustomField>